# leslie

./: Cargo.toml  Dockerfile  Justfile  README.md  build.rs  docker-compose.yml  flake.nix  prometheus.yml
proto/: clusterinfo.proto  gossip.proto
src/: chaos.rs  cli.rs  gossiper.rs  leslie.rs  main.rs  otel.rs  state.rs
src/services/: mod.rs
src/services/clusterinfo/: mod.rs  service.rs  task.rs
