[package]
name = "leslie"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
prost = "0.14.3"
tokio = { version = "1.50.0", features = ["full"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
