[package]
name = "leslie"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
prost = "0.14.3"
tokio = { version = "1.50.0", features = ["full"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
opentelemetry = { version = "0.23", features = ["metrics" ] }
opentelemetry-prometheus = "0.16"
prometheus = "0.13"
opentelemetry_sdk = "0.23.0"
axum = { version = "0.8", features = ["http1"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
